<resources>
    <!-- Descriptive string resources-->
    <string name="version_number">2.0.0</string>
    <string name="app_name">Simon Says</string>
    <string name="already_purchased_message">You have already paid to remove ads. You will never receive ads!</string>
    <string name="rate_the_app_title">Rate App</string>
    <string name="rate_the_app_message">Simon Says is made by a single person so your reviews mean a lot. Thank you for the effort. </string>
    <string name="more_games_title">More Games</string>
    <string name="more_games_message">View other games made by me.</string>
    <string name="no_ads_title">Remove Ads</string>
    <string name="no_ads_message">Make a small purchase to permanently remove ads.</string>
    <string name="purchase_success_message">You will never receive ads again! Thank you very much for your support.</string>
    <string name="exit_title">Are you sure you want to leave?</string>
    <string name="exit_message">Your current game will be lost</string>
    <string name="unlock_modes_title">Unlock Game Modes</string>
    <string name="unlock_modes_message">Watch a video to permanently unlock additional game modes!</string>

    <!-- Explicit string resources -->
    <string name="Already_Purchased">Already Purchased</string>
    <string name="Best">Best</string>
    <string name="Cancel">Cancel</string>
    <string name="Close">Close</string>
    <string name="Correct">Correct</string>
    <string name="Exit_App">Exit App</string>
    <string name="Game_Modes">Game Modes</string>
    <string name="Game_Over">Game Over</string>
    <string name="Menu">Main Menu</string>
    <string name="Mode">Mode</string>
    <string name="OK">OK</string>
    <string name="Pressed">Pressed</string>
    <string name="Purchase">Purchase</string>
    <string name="Purchase_Successful">Purchase Successful!</string>
    <string name="Play_Again">Play Again</string>
    <string name="Playing">Playing</string>
    <string name="Rate">Rate</string>
    <string name="Select_Mode">Select Mode</string>
    <string name="Score">Score</string>
    <string name="Settings">Settings</string>
    <string name="View">View</string>
    <string name="Watch">Watch</string>
    <string name="Watch_and_repeat">Watch and repeat</string>

    <string name="Speed"    >Speed</string>
    <string name="Normal"   >Normal</string>
    <string name="Fast"     >Fast</string>
    <string name="Extreme"  >Extreme</string>
    <string name="Insane"   >Insane</string>

    <string name="Colors"   >Colors</string>
    <string name="Classic"  >Classic</string>
    <string name="Warm"     >Warm</string>
    <string name="Cool"     >Cool</string>
    <string name="Royal"    >Royal</string>
    <string name="Inverted" >Inverted</string>
    <string name="Greyed"   >Greyed</string>

    <string name="Green"     >Green</string>
    <string name="Red"       >Red</string>
    <string name="Yellow"    >Yellow</string>
    <string name="Blue"      >Blue</string>

    <string name="Top_Left"  >Top Left</string>
    <string name="Top_Right" >Top Right</string>
    <string name="Bot_Left"  >Bottom Left</string>
    <string name="Bot_Right" >Bottom Right</string>

    <!-- Error Strings -->
    <string name="Error">Error</string>
    <string name="Unknown_Error">Unknown Error</string>
    <string name="unknown_null_intent_sender">Null intent sender</string>
    <string name="unknown_null_intent_data">Null intent data</string>
    <string name="unknown_remote_exception">Remote exception</string>
    <string name="null_pending_intent_error_message">You may have already made this purchase. Try again later.</string>
    <string name="null_mService_error_message">Could not connect to Google Billing. Check that you have Google Play Store installed and operational or try again later. </string>
    <string name="video_not_loaded_title">Not Loaded</string>
    <string name="video_not_loaded_message">Still waiting for video to load. Check your connection or try again later.</string>

    <!-- Game Mode Names -->
    <string name="mode_Classic">Classic</string>
    <string name="mode_Reverse">Reverse</string>
    <string name="mode_Chaos">Chaos</string>
    <string name="mode_Single">Single</string>

    <!-- Game Mode Descriptions -->
    <string name="description_Classic">The classic game. Repeat the sequence that grows by one each round.</string>
    <string name="description_Reverse">You must replay the sequence in reverse!</string>
    <string name="description_Chaos">The whole sequence completely changes each round.</string>
    <string name="description_Single">Only the newest color added to the sequence plays back. You must still repeat the whole sequence.</string>

</resources>
