<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_rectangle"
        android:layout_gravity="center"
        android:id="@+id/settingsScreen">

        <TextView
            android:text="@string/Settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/block"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:text="@string/Speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/leftArrow"
                android:background="@drawable/left_arrow"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:text="@string/Extreme"
                android:layout_height="wrap_content"
                android:id="@+id/speedText"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_width="75dp" />

            <Button
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:id="@+id/rightArrow"
                android:background="@drawable/right_arrow"
                android:layout_gravity="center" />
        </LinearLayout>

        <Button
            android:text="@string/Close"
            android:background="@drawable/bordered_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsCloseButton"
            android:textStyle="bold"
            android:textSize="20dp"
            android:padding="0dp"
            android:layout_marginTop="8dp"
            android:layout_margin="8dp" />
    </LinearLayout>

</LinearLayout>
