<?xml version="1.0" encoding="utf-8"?>

<!-- tools:showIn="@layout/activity_main" -->
<hackman.trevor.copycat.SettingsScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsScreen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="@drawable/bordered_rectangle"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settingsHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/Settings"
        android:textAlignment="center"
        android:textAppearance="@style/SettingsScreenText"
        android:textSize="30dp"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/divider_settings"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/block"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/Speed"
            android:textAlignment="textEnd"
            android:textAppearance="@style/SettingsScreenText"
            android:textSize="25dp"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leftArrow0"
                android:layout_width="@dimen/settings_arrow_size"
                android:layout_height="@dimen/settings_arrow_size"
                android:layout_gravity="center"
                android:background="@drawable/left_arrow" />

            <TextView
                android:id="@+id/speedText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Extreme"
                android:textAlignment="center"
                android:textAppearance="@style/SettingsScreenText"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/rightArrow0"
                android:layout_width="@dimen/settings_arrow_size"
                android:layout_height="@dimen/settings_arrow_size"
                android:layout_gravity="center"
                android:background="@drawable/right_arrow" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="1"
            android:text="@string/Colors"
            android:textAlignment="textEnd"
            android:textAppearance="@style/SettingsScreenText"
            android:textSize="25dp"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/leftArrow1"
                android:layout_width="@dimen/settings_arrow_size"
                android:layout_height="@dimen/settings_arrow_size"
                android:layout_gravity="center"
                android:background="@drawable/left_arrow" />

            <TextView
                android:id="@+id/colorsText"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Inverted"
                android:textAlignment="center"
                android:textAppearance="@style/SettingsScreenText"
                android:textSize="20dp"
                tools:ignore="SpUsage" />

            <Button
                android:id="@+id/rightArrow1"
                android:layout_width="@dimen/settings_arrow_size"
                android:layout_height="@dimen/settings_arrow_size"
                android:layout_gravity="center"
                android:background="@drawable/right_arrow" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/settingsCloseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bordered_rectangle_2"
        android:padding="0dp"
        android:text="@string/Close"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:ignore="SpUsage" />
</hackman.trevor.copycat.SettingsScreen>