<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hackman.trevor.copycat.MainActivity">

    <LinearLayout
        android:id="@+id/deathScreen"
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:alpha="0"
        android:background="@drawable/bordered_rectangle">

        <TextView
            android:text="@string/Score"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:textColor="#ffffff"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/score"
            android:text="123"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:textColor="#ffffff"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <TextView
            android:text="@string/High_Score"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:textColor="#ffffff"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/highScore"
            android:text="321"
            android:layout_width="match_parent"
            android:visibility="visible"
            android:textColor="#ffffff"
            android:textSize="28dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/continueButton"
            android:text="@string/Continue"
            android:background="@drawable/bordered_rectangle_2"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_rectangle"
        android:layout_gravity="center"
        android:id="@+id/settingsScreen">

        <TextView
            android:text="@string/Settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp" />

        <ImageView
            android:layout_width="match_parent"
            android:background="@drawable/block"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:text="@string/Speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/leftArrow"
                android:background="@drawable/left_arrow"
                android:layout_gravity="center"
                android:layout_width="25dp"
                android:layout_height="25dp" />

            <TextView
                android:text="@string/Normal"
                android:layout_height="wrap_content"
                android:id="@+id/speedText"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textAlignment="center"
                android:layout_width="75dp" />

            <Button
                android:layout_height="25dp"
                android:layout_width="25dp"
                android:id="@+id/rightArrow"
                android:background="@drawable/right_arrow"
                android:layout_gravity="center" />
        </LinearLayout>

        <Button
            android:text="@string/Close"
            android:background="@drawable/bordered_rectangle_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/settingsCloseButton"
            android:textStyle="bold"
            android:textSize="20dp"
            android:padding="0dp"
            android:layout_margin="8dp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/colorAccentDarkDark"
        android:clickable="true" />

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:columnCount="2"
        app:rowCount="2">

        <hackman.trevor.copycat.ColorButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/greenButton"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/green"
            android:layout_marginBottom="@dimen/border_thickness"
            android:layout_marginEnd="@dimen/border_thickness" />

        <hackman.trevor.copycat.ColorButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/redButton"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/red"
            android:layout_marginBottom="@dimen/border_thickness"
            android:layout_marginStart="@dimen/border_thickness" />

        <hackman.trevor.copycat.ColorButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yellowButton"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:background="@color/yellow"
            android:layout_marginTop="@dimen/border_thickness"
            android:layout_marginEnd="@dimen/border_thickness" />

        <hackman.trevor.copycat.ColorButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/blueButton"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:background="@color/blue"
            android:layout_marginTop="@dimen/border_thickness"
            android:layout_marginStart="@dimen/border_thickness" />

    </android.support.v7.widget.GridLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="150dp"
            android:id="@+id/mainButton"
            android:layout_gravity="center"
            android:background="@drawable/circle"
            android:clickable="false"
            android:textColor="#ffffff"
            android:textSize="75dp"
            android:textStyle="bold"
            android:layout_height="150dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/symbolButton"
            android:background="@drawable/play_symbol"
            android:layout_gravity="center"
            android:clickable="false"
            android:visibility="visible" />

    </FrameLayout>

    <TextView
        android:text="@string/Watch_and_repeat"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="20dp"
        android:background="@drawable/instructions_rectangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="7dp"
        android:layout_marginBottom="60dp" />

    <Button
        android:layout_width="60dp"
        android:padding="0dp"
        android:background="@drawable/gear"
        android:layout_gravity="top|end"
        android:id="@+id/settings"
        android:layout_margin="5dp"
        android:layout_height="60dp"
        android:clickable="false" />

    <Button
        android:id="@+id/star"
        android:layout_gravity="bottom|end"
        android:padding="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/star"
        android:gravity="center"
        android:layout_width="60dp"
        android:layout_height="60dp" />

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/noAds"
        android:layout_gravity="bottom|start"
        android:padding="0dp"
        android:layout_margin="5dp"
        android:background="@drawable/no_ads"
        android:alpha="1" />

    <Button
        android:layout_width="60dp"
        android:id="@+id/moreGames"
        android:layout_gravity="top|start"
        android:padding="0dp"
        android:layout_margin="5dp"
        android:alpha="1"
        android:background="@drawable/more_games"
        android:layout_height="60dp" />

    <TextView
        android:text="@string/version_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textStyle="bold"
        android:textSize="25dp"
        android:id="@+id/Version"
        android:alpha="0" />

</FrameLayout>
